# suite2p

./: .gitignore  .pdm-python  pyproject.toml  setup.py  wilson_suite2p.cmd
.github/workflows/: test_and_deploy.yml
scripts/: self_install_local_editmode.cmd
suite2p/: __init__.py  default_ops.py  run_s2p.py  version.py
suite2p/detection/: anatomical.py  chan2detect.py  stats.py
suite2p/extraction/: extract.py
suite2p/gui/: gui2p.py  io.py  masks.py
suite2p/ops/: __init__.py
suite2p/registration/: nonrigid.py  register.py
